kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-validation
  namespace: dev
spec:
  selector:
    app: word-validation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
