kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: word-validation-ingress
  namespace: dev
spec:
  rules:
  - host: dev.skyxplug.dev
    http:
      paths:
      - backend:
          service:
            name: word-validation  # change as per service name
            port:
              number: 80 # change as per service port
        path: /
        pathType: ImplementationSpecific
